--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -17,10 +17,12 @@ framework:
         #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
     trusted_proxies: ~
-    session:         ~
+    session:
+        name:        symfasize
     fragments:       ~
     http_method_override: true
     serializer:      ~
+
 
 # Twig Configuration
 twig:
